--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,13 @@ spring.mustache.check-template-location = false
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # To improve the performance during development.
-# For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/tuesday_morning
+spring.datasource.username=root
+spring.datasource.password=mugishathi
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
